--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               width="270"
             />
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -107,7 +107,7 @@
               width="270"
             />
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -116,7 +116,7 @@
               width="270"
             />
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -125,17 +125,23 @@
               width="270"
             />
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <a href="#">WebStudio</a>
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
